--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-"Hello" 
+![home.jpg](/home.jpg)
+# 說明
+本站由<a href=https://github.com/Requarks/wiki>wiki.js</a>建立，以<a href=https://docs.requarks.io/en/editors/markdown>markdown</a>語法編輯
+## 段落
+> 灰色註解
+
+> 藍色資訊
+{.is-info}
+
+> 綠色建議
+{.is-success}
+
+> 黃色警告
+{.is-warning}
+
+> 紅色錯誤
+{.is-danger}
